--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </ul>
 
   <h2>Data Collection and Sharing</h2>
-  <p>We do not collect or share your data with third parties.</p>
+  <p>We do not collect or share your data with third parties. We do not use analytics, advertising, or tracking SDKs.</p>
 
   <h2>Permissions</h2>
   <ul>
@@ -35,6 +35,6 @@
   </ul>
 
   <h2>Contact</h2>
-  <p>If you have questions, email: support@yourdomain.com</p>
+  <p>If you have questions, email: tnownes@gmail.com</p>
 </body>
 </html>
